# choose-entities

./: .flake8  .gitignore  README.md  choose_ents.py  create_venv.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
choose_entities/: choose_ents.py  logger.py  prep_docs.py  redaction.py
requirements/: main.in  main.txt
tests/: conftest.py  test_labels.py  test_params.py  test_prep.py
