[tool.poetry]
name = "choose_entities"
version = "0.2.0"
description = "A tool to prepare pdfs for redaction and choose entities to redact."
authors = ["ann-cooper"]

[tool.poetry.dependencies]
python = "^3.7"
spacy = "^2.2.3"
easygui = "^0.98.1"
pytest = "^5.3.5"
textract = "^1.6.3"
pathlib = "^1.0.1"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
